compiler/testData/diagnostics/tests/nullableTypes/nullableArgumentForIn.kt
fun test(x: Int?) {
     <!TYPE_MISMATCH!>x<!> in 1..2
}